feat(api): site visit type changes adding previous visit type
